fixed sorted bug and removed scrollbars

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -11,6 +11,12 @@ $clr-neutral-light: rgb(105, 105, 105);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 #root {
